2010-10-16  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (note_mode_line_or_margin_highlight): Support
	bidi-reordered strings and R2L glyph rows.  Fix more comments.

2010-10-16  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (rows_from_pos_range, mouse_face_from_buffer_pos)
	(note_mode_line_or_margin_highlight): Fix comments.

2010-10-09  Eli Zaretskii  <eliz@gnu.org>

	Finished work on mouse_face_from_buffer_pos for bidi-reordered
	rows.  Need lots of testing, including bug#1220.
	Next task: get rid of fast_find_position, call
	mouse_face_from_buffer_pos instead.

	* xdisp.c (rows_from_pos_range): New function.
	(mouse_face_from_buffer_pos): Use it instead of calling
	row_containing_pos for START_CHARPOS and END_CHARPOS.
	(note_mouse_highlight): When bidi reordering is turned on in a
	buffer, call next-single-property-change and
	previous-single-property-change with last argument nil.

2010-10-02  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (coords_in_mouse_face_p): Fix the conditions for when
	mouse_face_beg_row and mouse_face_end_row are equal.
	(note_mouse_highlight): Clear mouse highlight when mouse pointer
	is in a R2L row on the stretch glyph that stands for no text
	beyond the line end.
	(row_containing_pos): Don't return too early when CHARPOS is in a
	bidi-reordered continued line.  Return immediately when the first
	hit is found in a line that is not continued, or when an exact
	match for CHARPOS is found.
	(mouse_face_from_buffer_pos): Rewrite to not assume that
	START_CHARPOS is always in mouse_face_beg_row.  If necessary, swap
	mouse_face_beg_row and mouse_face_end_row so that the former is
	always above the latter or identical to it.  Don't compute beg_col
	if already decided to paint from beginning of window.

2010-08-28  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (mouse_face_from_buffer_pos): Fix code using bug#1220 as
	test case.  Implement  highlight for R2L rows.  Fix the case of
	continued L2R lines.